# KRITISIN-GH.github.io

./: .nojekyll  AD688  README.md  _quarto.yml  about.html  about.qmd  contact.html  contact.qmd  index.html  index.qmd  project.html  projects.html  projects.qmd  pyproject.toml  requirements.txt  robots.txt  search.json  sitemap.xml
.github/workflows/: quarto-publish.yml
Assignment 1/: system_info.docx
_site/: about.html  index.html  search.json
site_libs/bootstrap/: bootstrap-ab69e4e0a1e2f157f05373e9c5e40abd.min.css
