[project]
name = "kritisin-gh-github-io-1"
version = "0.1.0"
description = ""
authors = [
    {name = "KRITI SINGH",email = "231106099+KRITISIN-GH@users.noreply.github.com."}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "kritisin_gh"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
